fixed horizontal scrolling

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -223,8 +223,13 @@ footer .social-links a:hover {
 
   .project-details,
   .content-container {
-    padding: 0;
+    padding: 0 15px;
     text-align: center;
+  }
+
+  .content h1 {
+    font-size: 48px;
+    line-height: 1.5;
   }
 
   .project-details h2 {
